fix(core): tooltip font size
On some linux chrome, the tooltip table had too large fonts.
It's still a bit mystery.

--- a/packages/core/src/styles/genome-spy.css
+++ b/packages/core/src/styles/genome-spy.css
@@ -121,7 +121,9 @@
         --background-color: #f6f6f6;
         background: var(--background-color);
         padding: var(--genome-spy-basic-spacing);
-        font-size: 12px;
+
+        --font-size: 12px;
+        font-size: var(--font-size);
 
         box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.21);
 
@@ -168,6 +170,7 @@
             td {
                 padding: 2px 0.4em;
                 vertical-align: top;
+                font-size: var(--font-size);
 
                 &:first-child {
                     padding-left: 0;
